* add deposit contract and transaction
* Nicer stdout output
* Add junit-style reporting for Prometheus and network connectivity
* Add junit-style reporting for tests
* Add a consensus test utility to the project.
* Add a license and test badge to the project.
* Clean up Makefile - make it work with a new checkout
* Add basic circleci CI configuration
* Allow to mount a volume for each container of the testnet so we can push logs to it for comparison purposes.
* Added a step to sanity check to ensure testnet nodes are reporting to Prometheus
* Added a new prometheus command that checks nodes are reporting correctly to Prometheus
* Added a new prometheus command that queries prometheus
* Changed testnetId to testnet in the destroy command
* Move prometheus instrumentation port to a parameter of the testnet
* Add support for prometheus
* Add lodestar to supported images.
* Trim TODO file.
* Fix README with the latest developments.
* Make set up time a configuration parameter
* Add a configurable numNodes parameter to the build
* Make port configurable in sanity Jenkins build
* Add lsof to all containers
* Add ability to execute commands inside nodes.
* Move the sanity check for one chain to a Jenkinsfile.
* Add more logging output to the network check and testnet deletion error handling
* Add ability to delete a testnet
* Add ability to specify ports to open for each node of the testnet
* Add tmux, iperf3 and openssh-server to lighthouse and prysm images
* Add Artemis support
* Add support for mounting volumes on nodes of the tesnet
* Add build for dockerfiles
* Add dockerfiles for Prysm and Lighthouse
* Initial commit with a tool to interface with genesis and a network tester.
