@@ -1,9 +1,11 @@
 package genesis
 
 import (
+	"encoding/json"
 	"io/ioutil"
 	"log"
 	"net/http"
+	"time"
 
 	"github.com/ethereum/eth2-client-tests/tester/genesis"
 	"github.com/urfave/cli"
@@ -47,6 +49,15 @@ var (
 					ValidatorsPassword,
 				},
 			},
+			cli.Command{
+				Name: "build-status",
+				Usage: "Provides information on the current state of the build in genesis, and waits for the build to complete",
+				Description: "This command queries genesis for the status of the build, and displays the information, every 5s, until the build completes or errors out",
+				Action: buildStatus,
+				Flags: []cli.Flag{
+					TestnetName,
+				},
+			},
 		},
 	}
 )
@@ -82,4 +93,42 @@ func testGenesisAvailable(ctx *cli.Context) {
 		log.Fatalf("The genesis server returned an error: %d", resp.StatusCode)
 	}
 	log.Printf("Genesis server contacted successfully")
+}
+
+// {"progress":100.000000,"error":null,"stage":"Finished","frozen":false}
+type BuildStatus struct {
+  Progress float32 `json:"progress"`
+  Error interface{} `json:"error"`
+  Stage string `json:"stage"`
+  Frozen bool `json:"frozen"`
+}
+
+func buildStatus(ctx *cli.Context) {
+	for
+	{
+		resp, err := http.Get("http://localhost:8000/status/build/" + ctx.String(TestnetName.Name))
+		if err != nil {
+			log.Fatal("There was an error contacting genesis", err)
+		}
+		defer resp.Body.Close()
+		body, err := ioutil.ReadAll(resp.Body)
+		if err != nil {
+			log.Fatal("There was an error reading the response from genesis", err)
+		}
+		if resp.StatusCode != 200 {
+			log.Fatalf("The genesis server returned an error: %d", resp.StatusCode)
+		}
+
+		var buildStatus BuildStatus
+		err = json.Unmarshal(body, &buildStatus)
+		if err != nil {
+			log.Fatalf("Unexpected issue unmarshalling json %v", err)
+		}
+		log.Printf("%s", string(body))
+		if buildStatus.Progress < 100 && buildStatus.Error == nil {
+			time.Sleep(5 * time.Second)
+		} else {
+			break
+		}
+	}
 }
